--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 * {
     box-sizing: border-box;
@@ -11,7 +11,7 @@ body {
     line-height: 1.3;
     transform: translateZ(0);
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
 }
 .cmd-input-container {
@@ -28,7 +28,6 @@ body {
 }
 .cmd-row-body {
     display: inline;
-    position: relative;
 }
 .cmd-input {
     display: inline;
@@ -45,8 +44,6 @@ body {
     position: absolute;
     top: 3px;
     left: 0;
-    /*top: 50%;*/
-    /*transform: translateY(-50%);*/
     display: none;
     content: "";
     animation: blink .4s ease-in-out infinite alternate;
@@ -59,16 +56,6 @@ body {
 .terminal.cmd-input-focus .cmd-input-cursor {
     display: inline-block;
 }
-@keyframes blink {
-    0% {
-        opacity: 0
-    }
-
-    to {
-        opacity: 1
-    }
-}
-
 
 .terminal {
     background-color: #000;
@@ -95,6 +82,91 @@ body {
     z-index: 1000;
     pointer-events: none;
     animation: flicker 0.12s infinite;
+}
+.scanlines {
+    display: none;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(
+            to bottom,
+            rgba(255,255,255,0),
+            rgba(255,255,255,0) 50%,
+            rgba(0,0,0,.2) 70%,
+            rgba(0,0,0,.6)
+    );
+    background-size: 100% .3rem;
+    position: fixed;
+    pointer-events: none;
+}
+.scanlines:before {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 5px;
+    background: #fff;
+    background: linear-gradient(to bottom,
+    rgba(255,0,0,0) 0%,
+    rgba(255,250,250,1) 50%,
+    rgba(255,255,255,0.98) 51%,
+    rgba(255,0,0,0) 100%
+    ); /* W3C */
+    opacity: .1;
+}
+.scanlines:after {
+    box-shadow: 0 2px 6px rgba(25,25,25,0.2),
+    inset 0 1px rgba(50,50,50,0.1),
+    inset 0 3px rgba(50,50,50,0.05),
+    inset 0 3px 8px rgba(64,64,64,0.05),
+    inset 0 -5px 10px rgba(25,25,25,0.1);
+}
+.terminal.cmd-input-focus .scanlines:before {
+    content: '';
+    display: block;
+    animation: vline calc(var(--time, 2) * 1s) linear infinite;
+}
+.terminal-old .scanlines {
+    display: block;
+}
+
+.noise {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 2000;
+    opacity: 0.05;
+    pointer-events: none;
+    background:
+            repeating-radial-gradient(#000 0 0.0001%,#fff 0 0.0002%) 50% 0/2500px 2500px,
+            repeating-conic-gradient(#000 0 0.0001%,#fff 0 0.0002%) 50% 50%/2500px 2500px;
+    background-blend-mode: difference;
+    animation: shift .2s infinite alternate;
+}
+@media (prefers-reduced-motion) {
+    .noise, .flicker, .scanlines:before {
+        animation: none !important;
+    }
+}
+.terminal-old .noise {
+    display: block;
+}
+.cmd-hide {
+    display: inline;
+    /*display: none;*/
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
 }
 @keyframes flicker {
     0% {
@@ -161,99 +233,11 @@ body {
         opacity: 0.37221;
     }
 }
-.scanlines {
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(
-            to bottom,
-            rgba(255,255,255,0),
-            rgba(255,255,255,0) 50%,
-            rgba(0,0,0,.2) 70%,
-            rgba(0,0,0,.6)
-    );
-    background-size: 100% .3rem;
-    position: fixed;
-    pointer-events: none;
-}
-.scanlines:before {
-    position: absolute;
-    top: 0px;
-    width: 100%;
-    height: 5px;
-    background: #fff;
-    background: linear-gradient(to bottom,
-    rgba(255,0,0,0) 0%,
-    rgba(255,250,250,1) 50%,
-    rgba(255,255,255,0.98) 51%,
-    rgba(255,0,0,0) 100%
-    ); /* W3C */
-    opacity: .1;
-}
-.scanlines:after {
-    box-shadow: 0 2px 6px rgba(25,25,25,0.2),
-    inset 0 1px rgba(50,50,50,0.1),
-    inset 0 3px rgba(50,50,50,0.05),
-    inset 0 3px 8px rgba(64,64,64,0.05),
-    inset 0 -5px 10px rgba(25,25,25,0.1);
-}
-
-.terminal.cmd-input-focus .scanlines:before {
-    content: '';
-    display: block;
-    animation: vline calc(var(--time, 2) * 1s) linear infinite;
-}
-
 @keyframes vline {
     to { transform: translate(0, 100vh)}
-}
-/* turn off animation */
-.tv {
-    height: 100vh;
-    position: relative;
-}
-.tv.collapse {
-    animation: size 2s ease-out;
-    animation-fill-mode: forwards;
-}
-.tv.collapse:before {
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    background: white;
-    z-index: 1;
-    opacity: 0;
-    animation: opacity 2s ease-out;
-    animation-fill-mode: forwards;
-}
-.noise {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 2000;
-    opacity: 0.05;
-    pointer-events: none;
-    background:
-            repeating-radial-gradient(#000 0 0.0001%,#fff 0 0.0002%) 50% 0/2500px 2500px,
-            repeating-conic-gradient(#000 0 0.0001%,#fff 0 0.0002%) 50% 50%/2500px 2500px;
-    background-blend-mode: difference;
-    animation: shift .2s infinite alternate;
 }
 @keyframes shift {
     100% {
         background-position: 50% 0, 50% 60%;
-    }
-}
-@media (prefers-reduced-motion) {
-    .noise, .flicker, .scanlines:before {
-        animation: none !important;
     }
 }
