--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'ubuntu';
+    src: url(/assets/fonts/ubuntu.ttf);
+}
 body {
     margin: 0;
     padding: 0;
@@ -56,15 +60,18 @@ body {
 .terminal.cmd-input-focus .cmd-input-cursor {
     display: inline-block;
 }
+.cmd-block-message a {
+    color: #fff;
+}
 
 .terminal {
     background-color: #000;
     color: #fff;
-    font-family: monospace;
+    font-family: 'ubuntu', sans-serif;
     font-size: 18px;
     line-height: 1.3;
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
 .terminal-old {
     background-color: #031e11;
